# PythonRozetkaTest

./: .gitignore  Dockerfile  docker-compose.yml  nginx.conf  pyproject.toml  setup.cfg
apps/category/: models.py  urls.py  views.py
apps/category/migrations/: 0001_initial.py
apps/core/enums/: regex_enum.py
apps/core/permissions/: is_admin_or_allow_any_post_permission.py  is_admin_or_read_only_permission.py  is_seller_or_read_only_permission.py  is_seller_permission.py  is_superuser_or_allow_any_post_permission.py
apps/product/: models.py  serializers.py  urls.py  views.py
apps/product/migrations/: 0001_initial.py  0002_alter_productmodel_stock.py
apps/subcategory/: apps.py  models.py  serializers.py  urls.py  views.py
apps/user/: managers.py  models.py  serializers.py  urls.py  views.py
apps/user/migrations/: 0001_initial.py  0002_profilemodel.py  0003_alter_profilemodel_age_alter_profilemodel_name_and_more.py
backend/apps/auth/: serializers.py  urls.py  views.py
backend/apps/category/: models.py  serializers.py  views.py
backend/apps/product/: models.py  views.py
backend/apps/subcategory/: urls.py  views.py
backend/apps/user/: models.py  serializers.py  urls.py  views.py
backend/configs/: settings.py
backend/templates/: base.html  recovery.html  register.html  test_email_rozetka.html
client/: asset-manifest.json  index.html
client/assets/: index-CGq3ttjJ.js
configs/: settings.py  urls.py
configs/extra_conf/: jwt_conf.py  rest_conf.py
frontend/: package-lock.json  package.json  vite.config.ts
frontend/src/: index.js  main.tsx
(+23 files in other folders)
